fix: autorities & RedisCacheManager